EXTRA_DIST = ./texmf/tex/images/CEAIntercalaire.eps					     \
	     ./texmf/tex/images/CEA_puce1.eps						     \
	     ./texmf/tex/images/CEABanner2012.svg					     \
	     ./texmf/tex/images/ceaeaDEC.eps						     \
	     ./texmf/tex/images/CEA_puces.svg						     \
	     ./texmf/tex/images/CEA_logo_quadri-sur-fond-rouge.eps			     \
	     ./texmf/tex/images/CEATitleBanner2012.eps					     \
	     ./texmf/tex/images/CEABannerLight2012.eps					     \
	     ./texmf/tex/images/CEA_logo_quadri-sur-fond-rouge.pdf			     \
	     ./texmf/tex/images/CEABanner2012.eps					     \
	     ./texmf/tex/images/Energie2010.eps						     \
	     ./texmf/tex/images/CEA_logo_quadri-sur-fond-rouge.svg			     \
	     ./texmf/tex/images/CEA_puce2.eps						     \
	     ./texmf/tex/images/beamerthemecea2012.sty					     \
	     ./texmf/tex/latex/SESC.tex							     \
	     ./texmf/tex/latex/couleurs.sty						     \
	     ./texmf/tex/latex/mecanique.sty						     \
	     ./texmf/tex/latex/LSC.tex							     \
	     ./texmf/tex/latex/note_technique_2010.cls					     \
	     ./texmf/tex/latex/beamer/ChangeLog						     \
	     ./texmf/tex/latex/beamer/base/beamerbaseoptions.sty			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonarticle.20.eps			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonbook.pdf			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonbook.eps			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonarticle.eps			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonarticle.pdf			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonarticle.20.pdf			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonbook.20.pdf			     \
	     ./texmf/tex/latex/beamer/base/art/beamericonbook.20.eps			     \
	     ./texmf/tex/latex/beamer/base/beamerbasercs.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasemisc.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerarticle.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasethemes.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbaseframesize.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbaseexercise.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasetitle.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbaselocalstructure.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasemodes.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbaseframe.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasetoc.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasenavigation.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasetheorems.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbaseboxes.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasefont.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasenotes.sty				     \
	     ./texmf/tex/latex/beamer/base/beamer.cls					     \
	     ./texmf/tex/latex/beamer/base/beamerbaseframecomponents.sty		     \
	     ./texmf/tex/latex/beamer/base/beamerbasedecode.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbaseoverlay.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasecompatibility.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbaseauxtemplates.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasesection.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasecolor.sty				     \
	     ./texmf/tex/latex/beamer/base/beamerbasetemplates.sty			     \
	     ./texmf/tex/latex/beamer/base/beamerbasearticle.sty			     \
	     ./texmf/tex/latex/beamer/FILES						     \
	     ./texmf/tex/latex/beamer/emacs/beamer.el					     \
	     ./texmf/tex/latex/beamer/doc/beamerug-macros.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerthemeexample.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-license.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-elements.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-overlays.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamercolorthemeexample.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-frames.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-tutorial.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerinnerthemeexample.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-color.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-solutions.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-fonts.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-installation.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-animations.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-nonpresentation.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-guidelines.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerouterthemeexample.tex			     \
	     ./texmf/tex/latex/beamer/doc/beameruserguide.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerfontthemeexample.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-workflow.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-interaction.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-compatibility.tex			     \
	     ./texmf/tex/latex/beamer/doc/beameruserguide.pdf				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-emulation.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-introduction.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-globalstructure.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-graphics.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-tricks.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerug-localstructure.tex			     \
	     ./texmf/tex/latex/beamer/doc/beamerug-themes.tex				     \
	     ./texmf/tex/latex/beamer/doc/beamerthemeexamplebase.tex			     \
	     ./texmf/tex/latex/beamer/INSTALL						     \
	     ./texmf/tex/latex/beamer/extensions/multimedia/xmpmulti.sty		     \
	     ./texmf/tex/latex/beamer/extensions/multimedia/multimedia.sty		     \
	     ./texmf/tex/latex/beamer/extensions/multimedia/multimediasymbols.sty	     \
	     ./texmf/tex/latex/beamer/emulation/beamerseminar.sty			     \
	     ./texmf/tex/latex/beamer/emulation/beamertexpower.sty			     \
	     ./texmf/tex/latex/beamer/emulation/examples/beamerexample-seminar.tex	     \
	     ./texmf/tex/latex/beamer/emulation/examples/beamerexample-prosper.tex	     \
	     ./texmf/tex/latex/beamer/emulation/examples/beamerexample-texpower.tex	     \
	     ./texmf/tex/latex/beamer/emulation/examples/beamerexample-foils.tex	     \
	     ./texmf/tex/latex/beamer/emulation/beamerprosper.sty			     \
	     ./texmf/tex/latex/beamer/emulation/beamerfoils.sty				     \
	     ./texmf/tex/latex/beamer/themes/inner/beamerinnerthemerectangles.sty	     \
	     ./texmf/tex/latex/beamer/themes/inner/beamerinnerthemedefault.sty		     \
	     ./texmf/tex/latex/beamer/themes/inner/beamerinnerthemeinmargin.sty		     \
	     ./texmf/tex/latex/beamer/themes/inner/beamerinnerthemecircles.sty		     \
	     ./texmf/tex/latex/beamer/themes/inner/beamerinnerthemerounded.sty		     \
	     ./texmf/tex/latex/beamer/themes/beamerthemecea.sty_old			     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeMontpellier.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemePaloAlto.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeSzeged.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeDresden.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemePittsburgh.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeSingapore.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeFrankfurt.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeRochester.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeIlmenau.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeGoettingen.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeBergen.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemedefault.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeCopenhagen.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeDarmstadt.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeBerlin.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeLuebeck.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeMarburg.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeboxes.sty			     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeWarsaw.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeAntibes.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeJuanLesPins.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeBerkeley.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeMadrid.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeMalmoe.sty		     \
	     ./texmf/tex/latex/beamer/themes/theme/beamerthemeHannover.sty		     \
	     ./texmf/tex/latex/beamer/themes/beamerthemecea.sty				     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemestructure.sty	     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemewhale.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemelily.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemedove.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemeorchid.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemebeetle.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemealbatross.sty	     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemefly.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemecrane.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemeseagull.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemesidebartab.sty	     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemeseahorse.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemedefault.sty		     \
	     ./texmf/tex/latex/beamer/themes/color/beamercolorthemerose.sty		     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemesplit.sty		     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemedefault.sty		     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemesidebar.sty		     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemeinfolines.sty	     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemesmoothtree.sty	     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemetree.sty		     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemesmoothbars.sty	     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthememiniframes.sty	     \
	     ./texmf/tex/latex/beamer/themes/outer/beamerouterthemeshadow.sty		     \
	     ./texmf/tex/latex/beamer/themes/beamerthemepleiades.sty			     \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemestructurebold.sty	     \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemedefault.sty		     \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemeserif.sty		     \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemestructureitalicserif.sty    \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemeprofessionalfonts.sty	     \
	     ./texmf/tex/latex/beamer/themes/font/beamerfontthemestructuresmallcapsserif.sty \
	     ./texmf/tex/latex/beamer/AUTHORS						     \
	     ./texmf/tex/latex/beamer/README						     \
	     ./texmf/tex/latex/beamer/TODO						     \
	     ./texmf/tex/latex/helvetCEA.sty						     \
	     ./texmf/tex/latex/mathematiques.sty					     \
	     ./texmf/tex/latex/variables_2010.tex					     \
	     ./texmf/tex/latex/gnuplot.sty						     \
	     ./texmf/tex/latex/presentation.sty						     \
	     ./texmf/tex/latex/mise_en_page_2010.tex					     \
	     ./texmf/ls-R								     \
	     ./texmf/bibtex/fr-insa.bst
