EXTRA_DIST=CMakeLists.txt                               \
           Bibliographie.bib                            \
	   images/EllipticFuelRodPowerDensity.eps       \
	   images/EllipticFuelRodPowerDensityLegend.eps \
	   images/r-epsilon-2.eps			\
	   images/r-epsilon.eps				\
	   images/r_epsilon.gnuplot			\
	   style.ist

