EXTRA_DIST=CMakeLists.txt 				 \
	   ./mfront/EllipticCreep-final.mfront		 \
	   ./mfront/ViscoMemoNrad.mfront		 \
	   ./mfront/Chaboche.mfront			 \
	   ./mfront/Chabocheold.mfront			 \
	   ./mfront/EllipticCreep-1b.mfront		 \
	   ./mfront/viscochab.mfront			 \
	   ./mfront/viscochab3.mfront			 \
	   ./mfront/UO2.tplot				 \
	   ./mfront/viscochab2.mfront			 \
	   ./mfront/UO2_YoungModulus_Fink1981.png	 \
	   ./mfront/UO2_ThermalExpansion_MATPRO.mfront	 \
	   ./mfront/EllipticCreep-1.mfront		 \
	   ./mfront/EllipticCreep.hxx			 \
	   ./mfront/UO2_YoungModulus_Fink1981.mfront	 \
	   ./mfront/UO2_YoungModulus_Fink1981.tex	 \
	   ./mfront/EllipticCreep-2.mfront		 \
	   ./mfront/norton.mfront			 \
	   ./mfront/UO2_PoissonRatio_Fink1981.mfront	 \
	   ./ViscoCompressible.tex.in			 \
	   ./python/mfrontexec.comm			 \
	   ./python/comportement.py			 \
	   ./python/comportement.comm			 \
	   ./python/defimateriau.py			 \
	   ./tutoriel.tex.in				 \
	   ./images/tutorielch12-img10.png		 \
	   ./images/tutorielch12-img1.png		 \
	   ./images/Kel.png				 \
	   ./images/tutorielch12-img16.png		 \
	   ./images/tutorielch12-img11.png		 \
	   ./images/tutorielch12-img7.png		 \
	   ./images/tutorielch12-img13.png		 \
	   ./images/tutorielch12-img3.pdf		 \
	   ./images/tutorielch12-img15.png		 \
	   ./images/Hayhurstiso.png			 \
	   ./images/tutorielch12-img8.png		 \
	   ./images/tutorielch12-img5.png		 \
	   ./images/Kcoh.png				 \
	   ./images/tutorielch12-img4.png		 \
	   ./images/tutorielch12-img12.png		 \
	   ./images/Ktgt.png				 \
	   ./images/Ktgt2.png				 \
	   ./images/UO2_YoungModulus_Fink1981.png	 \
	   ./images/tutorielch12-img17.png		 \
	   ./images/hayhurst.png			 \
	   ./images/CourbeExpBurger.png			 \
	   ./images/tutorielch12-img9old.png		 \
	   ./images/tutorielch12-img19.png		 \
	   ./images/tutorielch12-img9.png		 \
	   ./images/cyclique.png			 \
	   ./images/tutorielch12-img20.png		 \
	   ./images/tutorielch12-img18.png		 \
	   ./images/tutorielch12-img2.pdf		 \
	   ./images/tutorielch12-img6.png		 \
	   ./images/tutorielch12-img14.png		 \
	   ./mtest/viscochab.mtest			 \
	   ./mtest/castemellipticcreep-convergence.png	 \
	   ./mtest/castemellipticcreep-pv.png		 \
	   ./mtest/castemellipticcreep-pv.svg		 \
	   ./mtest/castemellipticcreep-2.res		 \
	   ./mtest/castemellipticcreep-2-convergence.txt \
	   ./mtest/castemellipticcreep.mtest		 \
	   ./mtest/castemellipticcreep.gnuplot		 \
	   ./mtest/castemellipticcreep-2.mtest		 \
	   ./mtest/norton.mtest				 \
	   ./mtest/castemellipticcreep.res		 \
	   ./mtest/castemellipticcreep-pv.pdf		 \
	   ./mtest/castemellipticcreep-convergence.txt	 \
	   ./mtest/chaboche.mtest			 \
	   ./mtest/castemellipticcreep-porosity.svg	 \
	   ./mtest/castemellipticcreep-convergence-2.png \
	   ./mtest/castemellipticcreep-porosity.pdf	 \
	   ./mtest/castemellipticcreep-porosity.png	 \
	   ./mtest/castemellipticcreep-convergence-2.png